--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="@drawable/layout_bg"
-    tools:context="com.example.tick_tack_toe.StartPage">
+    tools:context="com.example.tick_tack_toe.view.StartPageActivity">
 
     <LinearLayout
         android:id="@+id/player1field"
